--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,10 @@ name = "pypi"
 
 [packages]
 django = "*"
-dynaconf = "*"
 python-telegram-bot = "*"
+dynaconf = "*"
+dj-database-url = "*"
+psycopg2 = "*"
 
 [dev-packages]
 black = "==20.8b1"
