--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ python-telegram-bot = "*"
 dynaconf = "*"
 dj-database-url = "*"
 psycopg2 = "*"
+pillow = "*"
+whitenoise = "*"
 
 [dev-packages]
 black = "==20.8b1"
