Django template on progres (#2)
* Create a simple django_template with Post form and include bootstrap to project templates

* Create a simple django_template with Post form and include bootstrap to project templates

* Create some django models for a store. Made some dependencies.

* Create some django models for a store. Made some dependencies.

* Some code refactoring for django-admin

* Index-page complete.

* Failed branch (#1)

* failed with urlpatterns

* Unfailed with urlpatterns

* Completed ajax and jquery

* Order detalization page complete

* Ordering works, some visual emprovement and deploying left

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

* trying to deploy on heroku

--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,13 @@ name = "pypi"
 
 [packages]
 django = "*"
-python-telegram-bot = "*"
 dynaconf = "*"
 dj-database-url = "*"
 psycopg2 = "*"
+pillow = "*"
+whitenoise = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [dev-packages]
 black = "==20.8b1"
