--- a/src/settings.yaml
+++ b/src/settings.yaml
@@ -1,11 +1,14 @@
 default:
   SECRET_KEY: ""
-  DEBUG: true
+  DEBUG: false
   ALLOWED_HOSTS: []
   DATABASE_URL: ""
+  VENV_SYNTHETIC: false
 
 development:
-  DEBUG: true
+  DEBUG: True
+  PORT: 8000
+  SECRET_KEY: "1"
   ALLOWED_HOSTS:
     - localhost
     - 127.0.0.1
