--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ whitenoise = "*"
 gunicorn = "*"
 django-heroku = "*"
 django-crispy-forms = "*"
+requests = "*"
 
 [dev-packages]
 black = "==20.8b1"
